<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.programmersnsandroidclient.viewmodel.SnsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="vertical"
        tools:context=".view.EditUserProfileFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sns_user_name" />

        <EditText
            android:id="@+id/sns_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/enter_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@{viewModel.currentUser.name}"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sns_user_description" />

        <EditText
            android:id="@+id/sns_user_discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/enter_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@{viewModel.currentUser.description}"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/update" />

    </LinearLayout>
</layout>