<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.programmersnsandroidclient.SnsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="vertical"
        tools:context=".UserProfileFragment">

        <TextView
            android:id="@+id/sns_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.currentUser.name!=null ? viewModel.currentUser.name : @string/unregistered_user_name}"
            android:hint="@string/sns_user_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sns_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:hint="@string/sns_user_id"
            android:text="@{viewModel.currentUser.id!=null ? viewModel.currentUser.id : @string/unregistered_user_id}" />

        <TextView
            android:id="@+id/sns_user_discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.currentUser.description!=null ? viewModel.currentUser.description : @string/instruction_for_unregistered_user}"
            android:hint="@string/sns_user_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:textColorPrimary" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/edit" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/update_snackbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</layout>