<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.programmersnsandroidclient.SnsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="vertical"
        tools:context=".UserSettingFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_setting"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/sns_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:text="@{viewModel.currentUser.name}"
            android:hint="@string/sns_user_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sns_user_discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:text="@{viewModel.currentUser.description}"
            android:hint="@string/sns_user_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />

    </LinearLayout>
</layout>